--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image Search Application</title>
     <script defer src="index.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,12 +13,11 @@
 <body>
     <h1>Image Search Application</h1>
     <div class="main">
-        <input type="text" id="inp" placeholder="Search For Images">
+        <input type="text" id="inp" placeholder="Search for images...">
         <button onclick="search()">Search</button>
+        <p id="error"></p>
     </div>
-    <div id="outputdiv">
-    </div>
-    <p id="error"></p>
+    <div id="outputdiv"></div>
 </body>
 
 </html>
